hw-03/answer_exercise_1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx-server
spec:
  selector:
    matchLabels:
      app: nginx-server
  replicas: 3
  template:
    metadata:
      labels:
        app: nginx-server
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.4
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 20m
            memory: "128Mi"
          requests:
            cpu: 20m
            memory: "128Mi"
            
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx-server
spec:
  selector: 
    app: nginx-server
  type: NodePort
  ports:
    - name: http
      targetPort: 80
      port: 80
      nodePort: 31717
