hw-03/answer_exercise_1/ingress-secret.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
      - eduardoguadalupe.developerlasalle.com
    secretName: nginx-secret
  rules:
    - host: eduardoguadalupe.developerlasalle.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
